Fix comment text overflow

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -5844,6 +5844,7 @@ for selection in timeline_search.js */
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   box-sizing: border-box;
+  word-wrap: break-word;
 }
 
 .comment-body-user {
@@ -5853,6 +5854,7 @@ for selection in timeline_search.js */
 
 .comment-flavour-text {
   width: 100%;
+  word-wrap: break-word;
 }
 
 .new-comment-area {
